2007-08-22  Ville Vainio  <vivainio@gmail.com>

	* iplib.py: no extra empty (last) line in raw hist w/ multiline
        statements
        
        * logger.py: Fix bug where blank lines in history were not
        added until AFTER adding the current line; translated and raw
        history should finally be in sync with prompt now.

2007-08-21  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: finding ipythonrc-PROF now skips ipy_profile_PROF.
        (for backwards compatibility)
        
        * history.py: switch back to %hist -t from %hist -r as default.
        At least until raw history is fixed for good.

2007-08-20  Ville Vainio  <vivainio@gmail.com>

	* ipapi.py, iplib.py: DebugTools accessible via _ip.dbg, to catch &
        locate alias redeclarations etc. Also, avoid handling
        _ip.IP.alias_table directly, prefer using _ip.defalias.
        

2007-08-15  Ville Vainio  <vivainio@gmail.com>

	* prefilter.py: ! is now always served first

2007-08-15  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (safe_execfile): fix the SystemExit
	auto-suppression code to work in Python2.4 (the internal structure
	of that exception changed and I'd only tested the code with 2.5).
	Bug reported by a SciPy attendee.

2007-08-13  Ville Vainio  <vivainio@gmail.com>

	* prefilter.py: reverted !c:/bin/foo fix, made % in
        multiline specials work again

2007-08-13  Ville Vainio  <vivainio@gmail.com>

	* prefilter.py: Take more care to special-case !, so that
        !c:/bin/foo.exe works.
        
        * setup.py: if we are building eggs, strip all docs and
        examples (it doesn't make sense to bytecompile examples,
        and docs would be in an awkward place anyway).
        
        * Ryan Krauss' patch fixes start menu shortcuts when IPython
        is installed into a directory that has spaces in the name.

2007-08-13  Fernando Perez  <Fernando.Perez@colorado.edu>
